rspec-tools/tests/resources/invalid-rules/S101/javascript/rule.adoc
// the maximum amount of frameworks is 6
== Why is this an issue?
== How to fix it in Express.js
== How to fix it in Node.js
== How to fix it in SSH2
== How to fix it in MongoDB
== How to fix it in Mongoose
== How to fix it in Sequelize
== How to fix it in Knex
